javascript/ql/test/query-tests/NodeJS/InvalidExport/tst2b.js
// OK: use of `exports` as shorthand for `module.exports`
module.exports = exports = {};
exports.a = 23;
